--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yuvrajkumar12.io/Chanakya_Public_School",
   "name": "college-website",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +10,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
-    "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
@@ -23,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
