--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yuvrajkumar12.io/Chanakya_Public_School",
+  "homepage": "https://yuvrajkumar.github.io/Chanakya_Public_School",
   "name": "college-website",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
-    "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "prop-types": "^15.8.1",
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5"
   },
