--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "build": "^0.1.4",
     "classnames": "^2.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
